syntax = "proto3";

option go_package = "sources/pb";

message Genre {
    message Genre {
        // id жанра
        uint64 id = 1;
        // название
        string name = 2;
        // информация
        string info = 3;
        // поджанры
        repeated Genre subgenres = 4;
        // количество произведений (опционально)
        uint64 work_count = 5;
        // количество голосов (опционально)
        uint64 vote_count = 6;   
    }

    message Group {
        // id группы жанров
        uint64 id = 1;
        // название
        string name = 2;
        // жанры
        repeated Genre genres = 5;
    }

    message GenresResponse {
        // группы жанров
        repeated Group groups = 1;
    }

    message ClassificationResponse {
        // группы жанров
        repeated Group groups = 1;
        // сколько раз пользователи классифицировали произведение
        uint64 classification_count = 2;
    }
}
